SmartExam-salesforce/force-app/main/default/objects/Response__c/fields/Exam_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Exam_Attempt__c</fullName>
    <label>Exam Attempt</label>
    <referenceTo>Exam_Attempt__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>