SmartExam-salesforce/force-app/main/default/objects/Response__c/fields/Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>